--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Frog</string>
     <string name="player_expected">ИГРОК ОЖИДАЕТСЯ</string>
+    <string name="timer">Ожидание присоединения игроков: %s c.</string>
 </resources>
